Fixing the inconsistent spacing
There was an inconsistent spacing between the image and title on the .description(back of the card). So, I changed the flex spacing(justify-content) from space-between to flex-start, and the changed the margin-left of the div containing title from % to pixels

--- a/carousel-card.css
+++ b/carousel-card.css
@@ -28,14 +28,14 @@
 .description-header{
     display: flex;
     align-items: flex-start;
-    justify-content: space-between;
+    justify-content: flex-start;
 }
 .description .member-image{
    width: 60px;
    border-radius:50%;
 }
 .description  .memeber-tile{
-    margin-left:10%;
+    margin-left:12px;
 }
 .description-divider{
     border: 1px solid #00B189;
